# prism_submission

./: README.md  pyproject.toml
examples/allencahn/configs/: config.yml
examples/allencahn/scripts/: ac_experiment.py  solve_ac.py  visualize.py
examples/circle/configs/: heat.yml  heat_forcing.yml  laplace.yml  transport.yml
examples/circle/scripts/: analyze_heat.py  analyze_laplace.py  analyze_transport.py  heat.py  heat_eqn_analytic.py  heat_forcing.py  heat_forcing_adaptive.py  laplace.py  transport.py
examples/diffusion/configs/: config.yml
examples/diffusion/data/: initial_field_coeffs.npy
examples/diffusion/scripts/: diffusion.py  visualize.py
examples/nls/configs/: config.yml
examples/nls/scripts/: nls_experiment.py  solve_nls.py  visualize.py
examples/peanut/configs/: config.yml  laplace_bilevel.yml  laplace_optimized.yml  wave.yml
examples/peanut/data/: laplace.csv
examples/peanut/scripts/: inverse_analysis.py  solve_helmholtz.py  solve_laplace.py  solve_laplace_bilateral.py  solve_laplace_inverse.py  solve_laplace_no_hole.py  solve_laplace_optimized.py  (+2 more)
figures/: dark_taal.py  figure_compile.sh  make_movies.py  plot_figures.py
figures/figure_latex/: fig_amery.tex  fig_heat_forcing.tex  fig_laplace.tex  fig_laplace_error.tex  fig_laplace_inverse_error.tex  fig_schematic.tex  fig_sphere_diffusion.tex  fig_stiff_eqs.tex  fig_transport.tex  fig_wave.tex
src/prism/: __init__.py  _problem.py  _solver.py  config.py  data.py  solve_utils.py
test/: test_fields.py
test/test_basis/: reference_basis.py  test_basis_fns.py  test_basis_nd.py
(+235 files in other folders)
