[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism"
version = "0.1.0"
description = "Meshless PDE and inverse problem solver on irregular geometries using spectral bases and residual-based optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=23.0.0",
    "diffrax>=0.6.1",
    "equinox>=0.11.10",
    "flake8>=6.0.0",
    "h5py>=3.14.0",
    "isort>=5.0.0",
    "jax>=0.4.37",
    "jaxlib>=0.4.36",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.3",
    "numpy>=2.2.0",
    "optax>=0.2.5",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
    "typing-extensions>=4.12.2",
]

[tool.setuptools.packages.find]
where = ["src"]
